[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "mmar-sim"
version = "0.1.0"
description = "MMAR multifractal market simulator with GOF validation and risk scenarios"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "curl-cffi>=0.15",
    "matplotlib>=3.10",
    "pandas>=2.0",
    "scipy>=1.11",
    "yfinance>=1.4",
]

[project.scripts]
mmar-sim = "real_fractal_sim:main"

[tool.setuptools]
packages = []
py-modules = ["real_fractal_sim", "real_fractal_sim_colab"]